# dkg-phd-thesis

./: .Rprofile  .coderabbit.yaml  .env.example  .envrc  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  clean_linux_distro.sh  hypotheses.rtf  poetry.toml  pyproject.toml  requirements.txt  setup_gcp_vm.sh  setup_remote.sh  uvr.toml
R/: run_power_analysis.r
R/apriori_power_analysis/: run_parallel_power_analysis.r
R/apriori_power_analysis/configs/: run_parallel_power_analysis.yaml
R/configs/: run_power_analysis.yaml
R/run_power_analysis/: run_parallel_power_analysis.sh
R/run_power_analysis/configs/: run_power_analysis.dev.yaml
R/run_power_analysis/scripts/: run_power_analysis.r
R/run_power_analysis/utils/: power_visual_utils.r
R/utils/: load_config.r  power_analysis_two_level.r
analysis/: CLAUDE.md
analysis/run_power_analysis/: README.md  main.sh
analysis/run_power_analysis/configs/: run_power_analysis.benchmark.yaml  run_power_analysis.benchmark_gcp.yaml  run_power_analysis.dev.yaml  run_power_analysis.prod.yaml  run_power_analysis.prod_gcp.yaml  run_power_analysis.prod_set1.yaml  run_power_analysis.prod_vm1.yaml  run_power_analysis.prod_vm2.yaml  run_power_analysis.prod_vm3.yaml  run_power_analysis.prod_vm4.yaml  run_power_analysis.prod_vm5.yaml
analysis/run_power_analysis/scripts/: run_power_analysis.r  visualize_power_analysis.R
analysis/run_power_analysis/utils/: power_analysis_utils.r
analysis/run_synthetic_data/: README.md
analysis/run_synthetic_data/data/: claude-gen-syn-followup-responses-20260223.csv  claude-syn-data-raw-20260223.csv
analysis/run_synthetic_data/schemas/: stg_syn__followup_responses.json  stg_syn_followup_responses.json
analysis/run_synthetic_data/scripts/: export_syn_fct_panel_responses_csv.sh  generate_synthetic_data.py  syn_data_infra.sh  syn_data_scored.sql  syn_export_for_r.sh  syn_followup_responses_infra.sh  syn_intake_responses_infra.sh
analysis/run_synthetic_data/utils/: data_loader.R  mlm_diagnostics.R  mlm_hypothesis_map.R
analysis/shared/utils/: common_utils.r  mlm_utils.r  plot_utils.r  table_utils.r
analysis/tests/: validate_r_structure.sh
code/scripts/: sandbox.R
gcp/: CLAUDE.md  README.md  rest_requests.http  scratchpad.sh
gcp/cloud_run_functions/run_followup_response/: main.py  requirements.txt
gcp/cloud_run_functions/run_followup_scheduling/: main.py  requirements.txt
gcp/cloud_run_functions/run_intake_confirmation/: main.py  requirements.txt
gcp/cloud_run_functions/run_qualtrics_scheduling/: .gcloudignore  main.py  requirements.txt
gcp/deploy/: compute.yaml  functions.yaml  gateway.yaml  manage_compute.py  manage_functions.py  manage_gateway.py  manage_infra.py  manage_pubsub.py  pubsub.yaml  setup_gcp_vm.sh
gcp/infra/bigquery/: bq_deploy.sh
gcp/infra/compute_engine/: vm_deploy_dev.sh
gcp/infra/iam/: iam_deploy.sh  iam_teardown.sh
gcp/infra/secret_manager/: generate_random_secret.py
gcp/run_build_gcp_resources/bigquery/: bq_teardown.sh
gcp/run_build_gcp_resources/compute_engine/: vm_deploy_prod.sh
gcp/run_contact_pipeline/: bindings.yaml  rest_client_requests.txt
gcp/run_contact_pipeline/bigquery/: bq_deploy.sh  bq_process.sh
gcp/run_contact_pipeline/cloud_run_functions/: .gcloudignore  deploy.sh  local_requests.http  main.py  requirements.txt  run_deploy.sh
gcp/run_contact_pipeline/pubsub/: policy_binding.sh  pubsub_process.sh
gcp/run_gsheet_contacts_pipeline/: deploy.sh  teardown.sh
gcp/run_gsheet_contacts_pipeline/bigquery/: bq_deploy.sh
gcp/run_gsheet_contacts_pipeline/cloud_run_functions/: .gcloudignore  deploy.sh  main.py  requirements.txt
gcp/run_qualtrics_contact_extraction/bigquery/: bq_deploy.sh  bq_teardown.sh
gcp/run_qualtrics_contact_extraction/cloud_run_functions/: .gcloudignore  deploy.sh  main.py  qualtrics_gsheet_db.js  requirements.txt
gcp/run_qualtrics_contact_pipeline/bigquery/: bq_deploy.sh  bq_teardown.sh
gcp/run_qualtrics_contact_pipeline/cloud_run_functions/: deploy.sh  local_requests.http  main.py  requirements.txt
gcp/run_qualtrics_scheduling/: main.py
gcp/run_qualtrics_scheduling/configs/: gcp_config.yaml  qualtrics_config.yaml
gcp/scripts/: deploy_run_qualtrics_scheduling.sh
gcp/shared/utils/: bq_schemas.py  (+5 more)
gcp/tests/: conftest.py  run_config.py  test_bq_schemas.py  test_config.py  test_followup_response.py  test_followup_scheduling.py  test_intake_confirmation.py  test_models.py  test_validation.py
images/: thesis-process-model.drawio  thesis-research-model.drawio
misc/: meade-notes.txt
misc/manuscript/: 00-research-design.docx  01-outline.docx  02-manuscript.docx  measures.docx
misc/r-sandbox/: sandbox.R  xx-scratchpad.R
r-work/: DKG PhD Thesis-interaction-time-workloc.json  DKG PhD Thesis.json  claude-gen-syn-data-v2.r  claude-gen-syn-data-v3.r  claude-syn-data.R  corr_analysis.R  feat_eng.R  mcfa_analysis.R  mlm_analysis.R  mlm_dev.R
renv/: settings.json
run_astro/: requirements.txt
run_astro/.astro/: config.yaml
scripts/hooks/: pre-commit
src/run_gen_data/: gen_data.R  gen_power_analysis.R
src/run_qualtrics/: run_qualtrics.py
src/run_qualtrics_contact_pipeline/: README.md  run_qualtrics_contact_pipeline.py
srcR/: run_renv_repair.r  run_renv_restore.r  run_renv_snapshot.r  run_renv_status.r
srcR/run_power_analysis/: README.md  run_power_analysis.sh
(+119 files in other folders)
