[project]
name = "dkg-phd-thesis"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
description = ""
authors = [{ name = "Demetrius K. Green, ABD", email = "dkgreen@ncsu.edu" }]
maintainers = [
    { name = "Demetrius K. Green, ABD", email = "dkgreen@ncsu.edu" },
]
readme = "README.md"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "PyYAML>=6.0.3",
]

[tool.uv]
package = false

[dependency-groups]
fn-qualtrics-scheduling = [
    "cloudevents>=1.12.0",
    "Flask>=3.1.2",
    "requests>=2.33.1",
    "functions-framework>=3.10.0",
    "google-auth>=2.48.0",
    "google-cloud-bigquery==3.39.0",
    "google-cloud-bigquery-storage>=2.36.0",
    "google-cloud-core>=2.4.0",
    "google-cloud-pubsub>=2.35.0",
]
fn-intake-confirmation = [
    "cloudevents>=1.12.0",
    "functions-framework>=3.10.0",
    "google-cloud-bigquery==3.39.0",
    "google-cloud-bigquery-storage>=2.36.0",
    "google-cloud-pubsub>=2.35.0",
    "twilio>=9.10.0",
]
fn-followup-scheduling = [
    "cloudevents>=1.12.0",
    "functions-framework>=3.10.0",
    "google-cloud-bigquery==3.39.0",
    "google-cloud-pubsub>=2.35.0",
    "twilio>=9.10.0",
]
fn-followup-response = [
    "functions-framework>=3.10.0",
    "google-cloud-bigquery==3.39.0",
    "google-cloud-bigquery-storage>=2.36.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.3.2",
    "radian==0.6.15",
    "rchitect>=0.4.9",
    "ruff==0.15.0",
    "shandy-sqlfmt[jinjafmt]>=0.29.0",
    # "faker==37.1.0",
    # "isort==5.13.2",
    # "mypy==1.11.0",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "scipy==1.15.3",
    # "pylint==3.3.2",
    # "pytest-responses>=0.5.1",
]

# [tool.mypy]
# check_untyped_defs = true
# exclude = ["app/tests/"]

[tool.ruff]
line-length = 80

[tool.sqlfmt]
line_length = 120
check = true

[tool.pytest.ini_options]
env = ["GOOGLE_CLOUD_PROJECT=test-project"]
